--- a/app/views/welcome/thisisthinker.html.erb
+++ b/app/views/welcome/thisisthinker.html.erb
@@ -40,7 +40,11 @@
       </div>
       <div class="">
         <%= f.label :password %>
-        <%= f.password_field :password%>
+        <%= f.password_field :password %>
+      </div>
+      <div class="">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation%>
       </div>
 
       <div class="">
