--- a/app/views/welcome/thisisthinker.html.erb
+++ b/app/views/welcome/thisisthinker.html.erb
@@ -1,8 +1,59 @@
 
 
 <div class="row">
+
   <div class="col-xs-2 col-xs-offset-10">
-    <%= link_to "Sign Up", new_user_path, class: 'btn btn-default' %>
+    <div class="sign_up_link">
+      <%= link_to "Sign Up", new_user_path, class: 'btn btn-default' %>
+    </div>
+
   </div>
 
+</div>
+
+<% if false %>
+  <div class="row">
+    <div class="col-xs-10 col-xs-offset-1">
+
+      <% if notice %>
+        <%= notice %>
+      <% end %>
+
+    </div>
+
+  </div>
+<% end %>
+
+
+
+<div class="row">
+
+  <div class="col-xs-4 col-xs-offset-4">
+
+    <h3>Sign-in!</h3>
+
+    <div class="sign_in_form">
+      <%= form_tag do %>
+
+        <div class="row">
+          <%= label_tag :username %>
+          <%= text_field_tag :username %>
+        </div>
+
+        <div class="row">
+          <%= label_tag :password %>
+          <%= password_field_tag :password %>
+        </div>
+
+        <div class="">
+          <%= submit_tag "Sign In" %>
+          or
+          <%= link_to 'Sign Up', home_path %>
+        </div>
+
+      <% end %>
+
+    </div>
+
+  </div>
 </div>
