--- a/app/views/welcome/thisisthinker.html.erb
+++ b/app/views/welcome/thisisthinker.html.erb
@@ -1,5 +1,5 @@
 
-
+<% if false %>
 <div class="row">
 
   <div class="col-xs-2 col-xs-offset-10">
@@ -10,6 +10,8 @@
   </div>
 
 </div>
+
+<% end %>
 
 <% if false %>
   <div class="row">
@@ -48,7 +50,7 @@
         <div class="">
           <%= submit_tag "Sign In" %>
           or
-          <%= link_to 'Sign Up', home_path %>
+          <%= link_to 'Sign Up', new_user_path %>
         </div>
 
       <% end %>
