--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   </div>
   <div class="col-xs-4">
     <div class="signout_link">
-      <%= link_to "Log out", home_path %>
+      <%= link_to "Log out", sign_out_path %>
     </div>
   </div>
 
