--- a/app/assets/stylesheets/thoughts.scss
+++ b/app/assets/stylesheets/thoughts.scss
@@ -1,6 +1,14 @@
 $mainblue: #2980b9;
 $cloud: #ecf0f1;
+$thoughtorange: #ffeee6;
+$backgroundwhite: #f2f2f2;
 
+
+body{
+
+  background-color: $backgroundwhite;
+
+}
 .menubar{
   padding-top: 2px;
   padding-bottom: 2px;
@@ -37,4 +45,52 @@ $cloud: #ecf0f1;
       text-align: right;
 
     }
+}
+
+
+.home_thought_new{
+
+  margin-bottom: 0px;
+  padding-top: 5px;
+  padding-bottom: 0px;
+
+  background-color: $thoughtorange;
+
+
+}
+.home_thought{
+
+  margin-bottom: 0px;
+  padding-top: 5px;
+  padding-bottom: 0px;
+
+  &:hover{
+
+    background-color: $thoughtorange;
+
+  }
+
+  h5{
+    margin-bottom: 1px;
+
+  }
+
+  h3 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+
+  }
+
+
+  span {
+
+    font-size: 15px;
+
+    &:hover{
+
+      color:  #ff0066;
+
+    }
+  }
+
 }
