--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 <div class="row menubar">
 
-  <div class="col-xs-4">
+  <div class="col-xs-3 col-xs-offset-1">
     <div class="menulinks">
       <%= link_to "Home", home_path %>
       <%= link_to "New Thought", new_thought_path %>
@@ -25,7 +25,7 @@
       </h3>
     </div>
   </div>
-  <div class="col-xs-4">
+  <div class="col-xs-2">
     <div class="signout_link">
       <%= link_to "Log out", sign_out_path %>
     </div>
