--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,27 +14,36 @@
   <div class="col-xs-3 col-xs-offset-1">
     <div class="menulinks">
       <%= link_to "Home", home_path %>
-      <%= link_to "New Thought", new_thought_path %>
+      <%= link_to "New Thought", home_path %>
     </div>
   </div>
 
   <div class="col-xs-4">
     <div class="mainlogo">
+      <%= link_to welcome_path do %>
       <h3>
         <span class="glyphicon glyphicon-equalizer" aria-hidden="true"></span>
       </h3>
+      <% end %>
     </div>
   </div>
   <div class="col-xs-2">
+    <% if @current_user %>
     <div class="signout_link">
       <%= link_to "Log out", sign_out_path %>
     </div>
+    <% else %>
+    <div class="signin_link">
+      <%= link_to "Sign In", welcome_path %>
+    </div>
+
+    <% end  %>
   </div>
 
 </div>
 
 <div class="row">
-  <div class="col-xs-10 col-xs-offset-1">
+  <div class="col-xs-9 col-xs-offset-1">
     <% if notice %>
       <div class="alert alert-warning">  <%= notice %>  </p>
     <% end %>
@@ -42,9 +51,26 @@
 
   </div>
 
+
+
 </div>
 
 <%= yield %>
+
+<div class="row">
+  <div class="col-xs-2 col-xs-offset-10">
+
+    <% if @current_user %>
+          <p>
+            signed in as <%= @current_user.username %>
+          </p>
+    <% else %>
+    <% end  %>
+
+  </div>
+
+</div>
+
 
 </body>
 </html>
