--- a/app/views/thoughts/home.html.erb
+++ b/app/views/thoughts/home.html.erb
@@ -1,38 +1,74 @@
 
 <div class="row">
-
+<% if @current_user %>
   <div class="col-xs-3 col-xs-offset-1">
-
-  </div>
-
-
-  <div class="col-xs-6">
-
-    <div class="well home_thought_new">
-      <div class="form-group">
-
-        <%= form_for @thought, url: create_user_path do |f| %>
-
-          <div class="">
-            <%= f.text_area :body, class: "form-control", size:"10x2" %>
-            <%= f.submit "Submit"%>
+    <div class="well">
+      <div class="row">
+        <div class="col-xs-4">
+          <span>pic</span>
+        </div>
+        <div class="col-xs-8">
+          <div class="row">
+            <h4> <%= @current_user.full_name %> </h4>
           </div>
-
-        <% end %>
+          <div class="row">
+            <small> @<%= @current_user.username %> </small>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4">
+          <div class="row">
+            <h6>Thoughts</h6>
+          </div>
+          <div class="row">
+            <h6>##</h6>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="row">
+            <h6>Following</h6>
+          </div>
+          <div class="row">
+            <h6>##</h6>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="row">
+            <h6>Followers</h6>
+          </div>
+          <div class="row">
+            <h6>##</h6>
+          </div>
+        </div>
 
       </div>
     </div>
   </div>
 
+  <% else %>
 
+  <div class="col-xs-4">
 
+  </div>
 
-</div>
+  <% end %>
 
+  <div class="col-xs-6">
+    <div class="well home_thought_new">
+      <div class="form-group">
 
-<% @thoughts.each do |thought| %>
-<div class="row">
-  <div class="col-xs-6 col-xs-offset-4">
+        <%= form_for @thought, url: create_thought_path do |f| %>
+          <div class="">
+            <%= f.text_area :body, class: "form-control", size:"10x2" %>
+            <%= f.submit "Submit"%>
+          </div>
+        <% end %>
+
+      </div>
+    </div>
+
+    <% @thoughts.each do |thought| %>
     <div class="well home_thought">
       <div class="row">
         <div class="col-xs-11 col-xs-offset-1">
@@ -52,9 +88,17 @@
           </h3>
         </div>
       </div>
+    </div>
+  <% end %>
+
+</div>
+
+
+<div class="row">
+  <div class="col-xs-6 col-xs-offset-4">
+
 
     </div>
   </div>
 
 </div>
-<% end %>
