--- a/app/views/thoughts/home.html.erb
+++ b/app/views/thoughts/home.html.erb
@@ -22,7 +22,9 @@
             <h6>Thoughts</h6>
           </div>
           <div class="row">
-            <h6>##</h6>
+            <div class="current_user_counts">
+              <h6><%= @current_user.thoughts.count %></h6>
+            </div>
           </div>
         </div>
         <div class="col-xs-4">
