Followers gem installed and layout being set-up, missing following functionality using actions

--- a/app/assets/stylesheets/thoughts.scss
+++ b/app/assets/stylesheets/thoughts.scss
@@ -47,7 +47,7 @@ body{
     }
 
     .signin_link {
-      text-align: right; 
+      text-align: right;
 
     }
 }
@@ -97,5 +97,11 @@ body{
 
     }
   }
+
+}
+
+.allthinkers_username{
+  background-color: blue;
+  align-items: right;
 
 }
