--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <div class="menulinks">
       <%= link_to "Home", home_path %>
       <%= link_to "New Thought", home_path %>
+      <%= link_to "All Thinkers", users_path %>
     </div>
   </div>
 
