--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,9 @@
   <div class="col-xs-6 col-xs-offset-4">
 
     <div class="row">
-      <h3>All Thinkers</h3>
+      <div class="allthinkers_title">
+        <h3>All Thinkers <small>follow your favorites!</small></h3>
+      </div>
     </div>
 
     <div class="list-group">
@@ -11,7 +13,7 @@
       <div type="button" class="list-group-item">
         <div class="row">
           <div class="col-xs-6">
-            <%= user.username %>
+            <h5>@<%= user.username %></h5>
           </div>
           <div class="col-xs-6">
             <div class="allthinkers_links">
