--- a/app/views/thoughts/home.html.erb
+++ b/app/views/thoughts/home.html.erb
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row homefeed">
 <% if @current_user %>
   <div class="col-xs-3 col-xs-offset-1">
     <div class="well">
@@ -23,7 +23,7 @@
           </div>
           <div class="row">
             <div class="current_user_counts">
-              <h6><%= @current_user.thoughts.count %></h6>
+              <h4><%= @current_user.thoughts.count %></h4>
             </div>
           </div>
         </div>
@@ -32,7 +32,9 @@
             <h6>Following</h6>
           </div>
           <div class="row">
-            <h6>##</h6>
+            <%= link_to users_path do %>
+              <h4><%= @current_user.follows.count %></h4>
+            <% end %>
           </div>
         </div>
         <div class="col-xs-4">
@@ -40,7 +42,9 @@
             <h6>Followers</h6>
           </div>
           <div class="row">
-            <h6>##</h6>
+            <%= link_to users_path do %>
+            <h4><%= @current_user.followers.count %></h4>
+            <% end %>
           </div>
         </div>
 
@@ -56,19 +60,23 @@
 
   <% end %>
 
-  <div class="col-xs-6">
-    <div class="well home_thought_new">
-      <div class="form-group">
-
-        <%= form_for @thought, url: create_thought_path do |f| %>
-          <div class="">
-            <%= f.text_area :body, class: "form-control", size:"10x2" %>
-            <%= f.submit "Submit"%>
+    <div class="col-xs-6">
+      <div class="well home_thought_new">
+        <% if @current_user %>
+          <div class="form-group">
+            <%= form_for @thought, url: create_thought_path do |f| %>
+              <div class="">
+                <%= f.text_area :body, class: "form-control", size:"10x2" %>
+                <%= f.submit "Submit"%>
+              </div>
+            <% end %>
           </div>
+        <% else %>
+          <h4>
+            <%= link_to "Sign-up", create_user_path %> or <%= link_to "Sign-in", welcome_path%> to start sharing your thoughts with the world!
+          </h4>
         <% end %>
-
       </div>
-    </div>
 
     <% @thoughts.each do |thought| %>
     <div class="well home_thought">
