--- a/app/views/welcome/thisisthinker.html.erb
+++ b/app/views/welcome/thisisthinker.html.erb
@@ -14,24 +14,24 @@
 
 <div class="row">
 
-  <div class="col-xs-4 col-xs-offset-4">
+  <div class="col-xs-6 col-xs-offset-3">
 
-    <h3>Sign-in!</h3>
+    <h3 class= "welcome_title">Welcome, share your thoughts with the world...</h3>
 
     <div class="sign_in_form">
-      <%= form_tag do %>
+      <%= form_tag ({:class => 'form-group'}) do %>
 
         <div class="row">
           <%= label_tag :username %>
-          <%= text_field_tag :username %>
+          <%= text_field_tag :username,"",class: 'form-control'%>
         </div>
 
         <div class="row">
           <%= label_tag :password %>
-          <%= password_field_tag :password %>
+          <%= password_field_tag :password,"",class: 'form-control'%>
         </div>
 
-        <div class="">
+        <div class="row sign_in_buttons">
           <%= submit_tag "Sign In" %>
           or
           <%= link_to 'Sign Up', new_user_path %>
