--- a/app/assets/stylesheets/thoughts.scss
+++ b/app/assets/stylesheets/thoughts.scss
@@ -2,6 +2,7 @@ $mainblue: #2980b9;
 $cloud: #ecf0f1;
 $thoughtorange: #ffeee6;
 $backgroundwhite: #f2f2f2;
+$orange: #ff9900;
 
 
 body{
@@ -59,6 +60,12 @@ body{
 
 .welcome_title {
   margin-top: 100px;
+
+  small{
+
+      color: lighten($orange, 10%)
+
+  }
 }
 
 .sign_in_form {
