--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,58 +1,58 @@
 <div class="row">
 
-  <div class="col-xs-10 col-xs-offset-3">
-    <h3>Happy you are ready to get your thoughts out!</h3>
-
-    <h4>Sign-up:</h4>
+  <div class="col-xs-10 col-xs-offset-3 welcome_title">
+    <h2>Sign up here... <small>happy you are ready to get your thoughts out! </small>
+    </h2 >
   </div>
 
 </div>
 
+
+
+      <% if @user.errors.any? %>
+        <div class="errors">
+          <% @user.errors.full_messages.each do |msg| %>
+            <p>
+              <%= msg %>
+            </p>
+          <% end %>
+        </div>
+      <% end %>
+
 <div class="row">
+  <div class="col-xs-7 col-xs-offset-3">
+    <div class="sign_up_form form-group">
 
-  <div class="col-xs-10 col-xs-offset-3">
+      <%= form_for @user, url: create_user_path do |f| %>
 
+        <div class="">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name,class: 'form-control' %>
+        </div>
+        <div class="">
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name,class: 'form-control'%>
+        </div>
+        <div class="">
+          <%= f.label :username %>
+          <%= f.text_field :username,class: 'form-control'%>
+        </div>
+        <div class="">
+          <%= f.label :password %>
+          <%= f.password_field :password,class: 'form-control' %>
+        </div>
+        <div class="">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation,class: 'form-control'%>
+        </div>
 
-    <% if @user.errors.any? %>
-      <div class="errors">
-        <% @user.errors.full_messages.each do |msg| %>
-          <p>
-            <%= msg %>
-          </p>
-        <% end %>
-      </div>
-    <% end %>
+        <div class="">
+        <%= f.submit "Submit"%>
+        or
+        <%= link_to 'Cancel', :back %>
+        </div>
 
-    <%= form_for @user, url: create_user_path do |f| %>
-
-      <div class="">
-        <%= f.label :first_name %>
-        <%= f.text_field :first_name %>
-      </div>
-      <div class="">
-        <%= f.label :last_name %>
-        <%= f.text_field :last_name%>
-      </div>
-      <div class="">
-        <%= f.label :username %>
-        <%= f.text_field :username%>
-      </div>
-      <div class="">
-        <%= f.label :password %>
-        <%= f.password_field :password %>
-      </div>
-      <div class="">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation%>
-      </div>
-
-      <div class="">
-      <%= f.submit "Submit"%>
-      or
-      <%= link_to 'Cancel', :back %>
-      </div>
-
-    <% end %>
-
+      <% end %>
+    </div>
   </div>
 </div>
