--- a/app/views/welcome/thisisthinker.html.erb
+++ b/app/views/welcome/thisisthinker.html.erb
@@ -14,9 +14,11 @@
 
 <div class="row">
 
-  <div class="col-xs-6 col-xs-offset-3">
+  <div class="col-xs-7 col-xs-offset-3">
 
-    <h3 class= "welcome_title">Welcome, share your thoughts with the world...</h3>
+    <h1 class= "welcome_title">Welcome <small>start sharing your thoughts with the world...</small>
+
+    </h1>
 
     <div class="sign_in_form">
       <%= form_tag ({:class => 'form-group'}) do %>
@@ -32,7 +34,7 @@
         </div>
 
         <div class="row sign_in_buttons">
-          <%= submit_tag "Sign In" %>
+          <%= submit_tag "Sign In", class: "btn btn-warning" %>
           or
           <%= link_to 'Sign Up', new_user_path %>
         </div>
