--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,20 +13,34 @@
 
   <div class="col-xs-3 col-xs-offset-1">
     <div class="menulinks">
-      <%= link_to "Home", home_path %>
+      <%= link_to home_path do%>
+        <i class="glyphicon glyphicon-home"></i><inline> Home</inline>
+      <% end %>
       <% if @current_user %>
-        <%= link_to "All Thinkers", users_path %>
-        <%= link_to "New Thought", home_path %>
-        <% else end %>
+        <%= link_to users_path do%>
+          <i class="glyphicon glyphicon-link"></i><inline> All Thinkers</inline>
+        <% end %>
+        <%= link_to home_path do %>
+          <i class="glyphicon glyphicon-leaf"></i><inline> New Thought</inline>
+        <% end %>
+      <% else end %>
     </div>
   </div>
 
   <div class="col-xs-4">
     <div class="mainlogo">
-      <%= link_to welcome_path do %>
-      <h3>
-        <span class="glyphicon glyphicon-equalizer" aria-hidden="true"></span>
-      </h3>
+      <% if @current_user %>
+        <%= link_to home_path do %>
+        <h3>
+          <span class="glyphicon glyphicon-equalizer text-success" aria-hidden="true"></span>
+        </h3>
+        <% end %>
+      <% else %>
+        <%= link_to home_path do %>
+        <h3>
+          <span class="glyphicon glyphicon-equalizer text-success" aria-hidden="true"></span>
+        </h3>
+        <% end %>
       <% end %>
     </div>
   </div>
@@ -36,7 +50,7 @@
       <%= link_to "Log out", sign_out_path %>
     </div>
     <% else %>
-    <div class="signin_link">
+    <div class="">
     </div>
 
     <% end  %>
