--- a/app/views/thoughts/home.html.erb
+++ b/app/views/thoughts/home.html.erb
@@ -2,14 +2,14 @@
 <div class="row homefeed">
 <% if @current_user %>
   <div class="col-xs-3 col-xs-offset-1">
-    <div class="well">
+    <div class="well user_miniprofile">
       <div class="row">
         <div class="col-xs-4">
           <span>pic</span>
         </div>
         <div class="col-xs-8">
           <div class="row">
-            <h4> <%= @current_user.full_name %> </h4>
+            <h4 class="name"> <%= @current_user.full_name %> </h4>
           </div>
           <div class="row">
             <small> @<%= @current_user.username %> </small>
@@ -18,18 +18,18 @@
       </div>
       <div class="row">
         <div class="col-xs-4">
-          <div class="row">
-            <h6>Thoughts</h6>
+          <div class="row miniprofile_titles">
+            <h6><%= link_to "Thoughts", home_path %></h6>
           </div>
           <div class="row">
-            <div class="current_user_counts">
+            <div class="miniprofile_numbers">
               <h4><%= @current_user.thoughts.count %></h4>
             </div>
           </div>
         </div>
         <div class="col-xs-4">
-          <div class="row">
-            <h6>Following</h6>
+          <div class="row miniprofile_titles">
+            <h6><%= link_to "Following", users_path %></h6>
           </div>
           <div class="row">
             <%= link_to users_path do %>
@@ -38,8 +38,8 @@
           </div>
         </div>
         <div class="col-xs-4">
-          <div class="row">
-            <h6>Followers</h6>
+          <div class="row miniprofile_titles">
+            <h6><%= link_to "Followers", users_path %></h6>
           </div>
           <div class="row">
             <%= link_to users_path do %>
@@ -65,9 +65,9 @@
         <% if @current_user %>
           <div class="form-group">
             <%= form_for @thought, url: create_thought_path do |f| %>
-              <div class="">
-                <%= f.text_area :body, class: "form-control", size:"10x2" %>
-                <%= f.submit "Submit"%>
+                <%= f.text_area :body, value: "What are your thoughts?", class: "form-control", size:"10x2" %>
+                <div class="submitbtn">
+                <%= f.submit "Submit", class:"btn btn-default"%>
               </div>
             <% end %>
           </div>
