--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,11 @@
 <div class="row">
 
-  <div class="col-xs-10 col-xs-offset-3 welcome_title">
+  <div class="col-xs-10 col-xs-offset-3 sign_in_title">
     <h2>Sign up here... <small>happy you are ready to get your thoughts out! </small>
     </h2 >
   </div>
 
 </div>
-
-
 
       <% if @user.errors.any? %>
         <div class="errors">
@@ -42,12 +40,12 @@
           <%= f.password_field :password,class: 'form-control' %>
         </div>
         <div class="">
-          <%= f.label :password_confirmation %>
+          <%= f.label "Re-type password" %>
           <%= f.password_field :password_confirmation,class: 'form-control'%>
         </div>
 
-        <div class="">
-        <%= f.submit "Submit"%>
+        <div class="sign_up_buttons">
+        <%= f.submit "Submit", class: "btn btn-warning"%>
         or
         <%= link_to 'Cancel', :back %>
         </div>
