--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -40,7 +40,7 @@
           <%= f.password_field :password,class: 'form-control' %>
         </div>
         <div class="">
-          <%= f.label "Re-type password" %>
+          <%= f.label :password_confirmation, "Re-type password" %>
           <%= f.password_field :password_confirmation,class: 'form-control'%>
         </div>
 
