--- a/app/assets/stylesheets/thoughts.scss
+++ b/app/assets/stylesheets/thoughts.scss
@@ -53,14 +53,30 @@ $orange: #ff9900;
 
   margin-top: 15px;
 
+  .container{
+
+    padding-right: 35px;
+  }
+
   .user_miniprofile{
 
       background-color: #ffffff;
+      padding-bottom: 0px;
+      padding-top: 5px;
 
-      h6 a {
 
+      .name_username{
+          margin-top: 26px;
+
+      }
+
+      .profile_pic{
+
+        padding-left: 0px;
+      }
+
+      a {
           color: black;
-
           &:hover{
 
             color: $orange;
@@ -69,20 +85,35 @@ $orange: #ff9900;
 
       }
 
-      h4 {
+      h6 {
+        margin-bottom: 0px;
 
+
+      }
+
+      h4 {
+        // padding-left: 15px;
+        // text-align: center;
         color: $orange;
+        margin-top: 5px;
 
         &:hover{
 
           color: $orange;
           text-decoration: none;
-
         }
+
       }
 
       .name {
           color: black;
+          text-align: left;
+          margin-bottom: 0px;
+      }
+
+      .miniprofile_titles{
+
+        // margin-left: 0px;
 
       }
 
@@ -123,6 +154,7 @@ $orange: #ff9900;
 
     h5{
       margin-bottom: 1px;
+      margin-top: 5px;
 
     }
 
@@ -142,6 +174,17 @@ $orange: #ff9900;
         color:  #ff0066;
 
       }
+    }
+
+    .image {
+          padding-left: 5px;
+          margin-top: 5px;
+
+    }
+
+    .content {
+          padding-left: 25px;
+
     }
 
   }
