--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
         </h3>
         <% end %>
       <% else %>
-        <%= link_to home_path do %>
+        <%= link_to welcome_path do %>
         <h3>
           <span class="glyphicon glyphicon-equalizer text-success" aria-hidden="true"></span>
         </h3>
@@ -47,6 +47,7 @@
   <div class="col-xs-2">
     <% if @current_user %>
     <div class="signout_link">
+      <%= image_tag @current_user.photo_tag, size: "25x25"%>
       <%= link_to "Log out", sign_out_path %>
     </div>
     <% else %>
@@ -59,7 +60,7 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-6 col-xs-offset-4">
+  <div class="col-xs-7 col-xs-offset-3">
     <% if notice %>
       <div class="alert alert-warning">  <%= notice %>  </p>
     <% end %>
@@ -73,6 +74,7 @@
 
 <%= yield %>
 
+<% if false %>
 <div class="row">
   <div class="col-xs-2 col-xs-offset-10">
 
@@ -86,6 +88,8 @@
   </div>
 
 </div>
+
+<% end %>
 
 
 </body>
