--- a/app/views/thoughts/home.html.erb
+++ b/app/views/thoughts/home.html.erb
@@ -1,13 +1,14 @@
 
 <div class="row homefeed">
 <% if @current_user %>
-  <div class="col-xs-3 col-xs-offset-1">
+  <div class="col-xs-3 col-xs-offset-1 container">
     <div class="well user_miniprofile">
       <div class="row">
-        <div class="col-xs-4">
-          <span>pic</span>
+        <div class="col-xs-4 profile_pic">
+          <span><%= image_tag @current_user.photo_tag, size: "70x70"%>
+          </span>
         </div>
-        <div class="col-xs-8">
+        <div class="col-xs-8 name_username">
           <div class="row">
             <h4 class="name"> <%= @current_user.full_name %> </h4>
           </div>
@@ -60,7 +61,7 @@
 
   <% end %>
 
-    <div class="col-xs-6">
+  <div class="col-xs-6">
       <div class="well home_thought_new">
         <% if @current_user %>
           <div class="form-group">
@@ -78,37 +79,39 @@
         <% end %>
       </div>
 
-    <% @thoughts.each do |thought| %>
-    <div class="well home_thought">
-      <div class="row">
-        <div class="col-xs-11 col-xs-offset-1">
-          <h5> <%= thought.user.full_name %> <small>@<%= thought.user.username %> &#149 <%= time_ago_in_words(thought.created_at) %> ago </small>
-          </h5>
+      <% @thoughts.each do |thought| %>
+        <div class="well home_thought">
+          <div class="row">
+              <div class="col-xs-1 image">
+                  <%= image_tag thought.user.photo_tag, size: "50x50"%>
+              </div>
+
+              <div class="col-xs-11 content">
+                <div class="row">
+                  <h5> <%= thought.user.full_name %> <small>@<%= thought.user.username %> &#149 <%= time_ago_in_words(thought.created_at) %> ago </small>
+                  </h5>
+                </div>
+
+                <div class="row">
+                    <%= thought.body %>
+                </div>
+                <div class="row">
+                    <h3>
+                      <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+                    </h3>
+                </div>
+              </div>
+
+          </div>
+
         </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-11 col-xs-offset-1">
-          <%= thought.body %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-11 col-xs-offset-1">
-          <h3>
-            <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-          </h3>
-        </div>
+      <% end %>
+
+
+    <div class="row">
+      <div class="col-xs-6 col-xs-offset-4">
       </div>
     </div>
-  <% end %>
 
-</div>
-
-
-<div class="row">
-  <div class="col-xs-6 col-xs-offset-4">
-
-
-    </div>
   </div>
-
 </div>
